parrot (1.0.0-1) unstable; urgency=low
  * New upstream release
  * debian/control.in:
    - Updated Description of all packages.
    - Bumped Standards-Version to 3.8.1
  * debian/copyright:
    - Changed copyright holder to Parrot Foundation, reflecting change in
      distribution.
    - Removed copyright info for files no longer in distribution.

 -- Allison Randal <allison@parrot.org>  Tue, 17 Mar 2009 22:48:45 -0700

parrot (0.9.0-1) unstable; urgency=low

  * New upstream release
  * debian/control.in:
    - Build-Depends removed optional library libicu-dev.
      Removed optional library libgmp3-dev.
    - Depends for libparrot-dev removed optional library
      libicu-dev.
  * debian/rules
    - Removed --optimize flag from configure, known problems
      on 64-bit architectures.
    - Changed 'reallyinstall' target to 'install', matching
      change in source makefile.
  * debian/parrot-doc.docs
    - Updated to sync with doc files in distribution.
  * debian/copyright:
    - Updated copyright years.

 -- Allison Randal <allison@parrot.org>  Fri, 23 Jan 2009 15:16:25 -0800

parrot (0.7.0-1) unstable; urgency=low

  * New upstream release

 -- Nuno Carvalho <mestre.smash@gmail.com>  Tue, 02 Sep 2008 13:05:31 +0100

parrot (0.6.4-1) unstable; urgency=low

  * New upstream release
  * debian/copyright:
    - Added license link.
    - Updated copyright years.
    - Removed copyright info for files no longer in distribution.

 -- Nuno Carvalho <mestre.smash@gmail.com>  Sat, 16 Aug 2008 14:15:14 +0200

parrot (0.5.1-1) unstable; urgency=low

  * New upstream release (Closes: #444707).
  * debian/control.in:
    - Build-Depends updated to libicu-dev from libicu36-dev
      (Closes: #456835).
    - Depends for libparrot-dev updated to libicu-dev from
      libicu34-dev (Closes: #431289).
    - New maintainer: Parrot Debian Maintainers
      (Closes: #444708)
    - New uploaders: Allison Randal, Nuno Carvalho,
      Patrick Michaud